--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ bvh = "0.5.0"
 cgmath = "0.18"
 image = "0.23.14"
 nom_stl = "0.2.2"
+rand = "0.8.0"
+rand_chacha = "0.3.1"
 rayon = "1.5"
 typed-arena =  "2"
