--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 bitflags = "1.0"
 bvh = "0.5.0"
 cgmath = "0.18"
+float_next_after = "0.1.5"
 image = "0.23.14"
 nom_stl = "0.2.2"
 rand = "0.8.0"
