--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -12,6 +12,7 @@ bvh = "0.5.0"
 cgmath = "0.18"
 float_next_after = "0.1.5"
 image = "0.23.14"
+mesh = { path = "../mesh" }
 nom_stl = "0.2.2"
 rand = "0.8.0"
 rand_chacha = "0.3.1"
