--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Patrick Sullivan <patrick.sullivan@hey.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 bitflags = "1.0"
 bvh = "0.5.0"
@@ -18,3 +16,11 @@ rand = "0.8.0"
 rand_chacha = "0.3.1"
 rayon = "1.5"
 typed-arena =  "2"
+
+[lib]
+name = "renderer"
+path = "src/lib.rs"
+
+[[bin]]
+name = "renderer_demo"
+path = "src/demo.rs"
