--- a/renderer_cli/Cargo.toml
+++ b/renderer_cli/Cargo.toml
@@ -10,4 +10,6 @@ futures = "0.3"
 image = "0.23"
 mesh = { path = "../mesh" }
 renderer = { path = "../renderer" }
+ron = "0.6.4"
+serde = { version = "1.0", features = ["derive"] }
 typed-arena =  "2"
